--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -1,25 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@id/navigation_tasks">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="de.skash.ticketing.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/navigation_tasks"
+        android:name="de.skash.ticketing.feature.task.TasksFragment"
+        android:label="TasksFragment" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="de.skash.ticketing.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_people"
+        android:name="de.skash.ticketing.feature.person.PeopleFragment"
+        android:label="PeopleFragment" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="de.skash.ticketing.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_projects"
+        android:name="de.skash.ticketing.feature.project.ProjectsFragment"
+        android:label="ProjectsFragment" />
 </navigation>
