--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,18 +2,28 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_tasks"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_tasks" />
+        android:id="@+id/navigation_home"
+        android:icon="@drawable/icn_home"
+        android:title="@string/title_home" />
 
     <item
         android:id="@+id/navigation_projects"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/icn_projects"
         android:title="@string/title_projects" />
 
     <item
-        android:id="@+id/navigation_people"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_people" />
+        android:id="@+id/navigation_issues"
+        android:icon="@drawable/icn_issues"
+        android:title="@string/title_issues" />
+
+    <item
+        android:id="@+id/navigation_dashboard"
+        android:icon="@drawable/icn_dashboard"
+        android:title="@string/title_dashboard" />
+
+    <item
+        android:id="@+id/navigation_notifications"
+        android:icon="@drawable/icn_notifications"
+        android:title="@string/title_notifications" />
 
 </menu>
